prevent overflow on navbar css

--- a/src/index.css
+++ b/src/index.css
@@ -120,11 +120,16 @@ App.js
 
 .navbar {
   background-image: linear-gradient(to right, white, red);
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
   font-size: 14px;
   color: white;
   position: fixed;
   width: 100%;
   top: 0;
+  box-sizing: border-box;
+  z-index: 3;
 }
 
 /*
@@ -164,14 +169,14 @@ Restaurant.js, RestaurantCard.js
   top: 5%;
   left: 35%;
   text-align: center;
-  position: absolute
+  position: absolute;
 }
 
 .restaurant-container {
   top: 15%;
   left: 10%;
-  width: 80%;
-  height: 65%;
+  max-width: 80%;
+  max-height: 65%;
   background-color: rgba(255, 255, 255, 0.4);
   position: absolute;
   overflow-y: auto;
@@ -244,6 +249,7 @@ Footer.js
   width: 100%;
   max-height: 20%;
   position: fixed;
+  z-index: 3;
 }
 
 ul{
